; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_matview.c_SetMatViewPopulatedState.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_matview.c_SetMatViewPopulatedState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { %struct.TYPE_15__* }
%struct.TYPE_15__ = type { i64 }
%struct.TYPE_17__ = type { i32 }
%struct.TYPE_18__ = type { i32 }

@RELKIND_MATVIEW = common dso_local global i64 0, align 8
@RelationRelationId = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@RELOID = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"cache lookup failed for relation %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetMatViewPopulatedState(%struct.TYPE_16__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_16__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_16__*, align 8
  %6 = alloca %struct.TYPE_17__*, align 8
  store %struct.TYPE_16__* %0, %struct.TYPE_16__** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.TYPE_16__*, %struct.TYPE_16__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_15__*, %struct.TYPE_15__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @RELKIND_MATVIEW, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @Assert(i32 %14)
  %16 = load i32, i32* @RelationRelationId, align 4
  %17 = load i32, i32* @RowExclusiveLock, align 4
  %18 = call %struct.TYPE_16__* @table_open(i32 %16, i32 %17)
  store %struct.TYPE_16__* %18, %struct.TYPE_16__** %5, align 8
  %19 = load i32, i32* @RELOID, align 4
  %20 = load %struct.TYPE_16__*, %struct.TYPE_16__** %3, align 8
  %21 = call i32 @RelationGetRelid(%struct.TYPE_16__* %20)
  %22 = call i32 @ObjectIdGetDatum(i32 %21)
  %23 = call %struct.TYPE_17__* @SearchSysCacheCopy1(i32 %19, i32 %22)
  store %struct.TYPE_17__* %23, %struct.TYPE_17__** %6, align 8
  %24 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %25 = call i32 @HeapTupleIsValid(%struct.TYPE_17__* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %32, label %27

27:                                               ; preds = %2
  %28 = load i32, i32* @ERROR, align 4
  %29 = load %struct.TYPE_16__*, %struct.TYPE_16__** %3, align 8
  %30 = call i32 @RelationGetRelid(%struct.TYPE_16__* %29)
  %31 = call i32 @elog(i32 %28, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %27, %2
  %33 = load i32, i32* %4, align 4
  %34 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %35 = call i64 @GETSTRUCT(%struct.TYPE_17__* %34)
  %36 = inttoptr i64 %35 to %struct.TYPE_18__*
  %37 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %36, i32 0, i32 0
  store i32 %33, i32* %37, align 4
  %38 = load %struct.TYPE_16__*, %struct.TYPE_16__** %5, align 8
  %39 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %39, i32 0, i32 0
  %41 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %42 = call i32 @CatalogTupleUpdate(%struct.TYPE_16__* %38, i32* %40, %struct.TYPE_17__* %41)
  %43 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %44 = call i32 @heap_freetuple(%struct.TYPE_17__* %43)
  %45 = load %struct.TYPE_16__*, %struct.TYPE_16__** %5, align 8
  %46 = load i32, i32* @RowExclusiveLock, align 4
  %47 = call i32 @table_close(%struct.TYPE_16__* %45, i32 %46)
  %48 = call i32 (...) @CommandCounterIncrement()
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local %struct.TYPE_16__* @table_open(i32, i32) #1

declare dso_local %struct.TYPE_17__* @SearchSysCacheCopy1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i32 @RelationGetRelid(%struct.TYPE_16__*) #1

declare dso_local i32 @HeapTupleIsValid(%struct.TYPE_17__*) #1

declare dso_local i32 @elog(i32, i8*, i32) #1

declare dso_local i64 @GETSTRUCT(%struct.TYPE_17__*) #1

declare dso_local i32 @CatalogTupleUpdate(%struct.TYPE_16__*, i32*, %struct.TYPE_17__*) #1

declare dso_local i32 @heap_freetuple(%struct.TYPE_17__*) #1

declare dso_local i32 @table_close(%struct.TYPE_16__*, i32) #1

declare dso_local i32 @CommandCounterIncrement(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
